--- a/cpm/projects/templates/projects/project_form.html
+++ b/cpm/projects/templates/projects/project_form.html
@@ -30,61 +30,62 @@
                 <div class="tab-content">
 
 
-                <div class="tab-pane active" id="new-project">
-                    <div class="instructions">
-                        <p class="lead">
-                            Step 1: Create New Project
-                        </p>
+                    <div class="tab-pane active" id="new-project">
+                        <div class="instructions">
+                            <p class="lead">
+                                Step 1: Create New Project
+                            </p>
+                            <p>
+                                Fill out the fields below to create a new project.
+                                Next you will add categories and tasks to this projects
+                            </p>
+                            <p class="success-message">
+                                New Project added!
+                            </p>
+                        </div>
+                        {% crispy form %}
+                    </div>
+                    <div class="tab-pane" id="new-category">
+                        <div class="instructions">
+                            <p class="lead">
+                                Step 2: Modify or Create Categories
+                            </p>
 
-                        <p>
-                            Fill out the fields below to create a new project.
-                            Next you will add categories and tasks to this projects
-                        </p>
+                            <p>
+                                Fill out the fields below to create a new categories or skip this step and reuse
+                                existing categories.
+                            </p>
 
-                        <p class="success-message">
-                            New Project added!
-                        </p>
+                            <p class="success-message">
+                                New Category added! Now create tasks for this project.
+                            </p>
+                        </div>
+                        {% crispy task_category_form %}
                     </div>
-                    {% crispy form %}
-                </div>
-                <div class="tab-pane" id="new-category">
-                    <div class="instructions">
-                        <p class="lead">
-                            Step 2: Modify or Create Categories
-                        </p>
-                        <p>
-                            Fill out the fields below to create a new categories or skip this step and reuse existing categories.
-                        </p>
-                        <p class="success-message">
-                            New Category added! Now create tasks for this project.
-                        </p>
+                    <div class="tab-pane" id="new-task">
+                        <div class="instructions">
+                            <p class="lead">
+                                Step 3: Create Tasks
+                            </p>
+                            <p>
+                                Fill out the fields below to create a new project.
+                                Next you will add categories and tasks to this projects
+                            </p>
+                            <p class="success-message">
+                                New Task added!
+                            </p>
+                        </div>
+                        {% crispy task_form %}
                     </div>
-                    {% crispy task_category_form %}
-                </div>
-                <div class="tab-pane" id="new-task">
-                    <div class="instructions">
-                        <p class="lead">
-                            Step 3: Create Tasks
-                        </p>
-                        <p>
-                            Fill out the fields below to create a new project.
-                            Next you will add categories and tasks to this projects
-                        </p>
-                        <p class="success-message">
-                            New Task added!
-                        </p>
-                    </div>
-                    {% crispy task_form %}
-                </div>
 
                 </div>
             </div>
         </div>
         <div class="span4">
-        <h3>Task Categories</h3>
+            <h3>Task Categories</h3>
             <ul class="nav nav-list" id="task-category-list">
                 {% for cat in task_categories %}
-                    <li><a href="{{ cat.get_update_url }}">{{ cat.title }}</a>
+                    <li id="category_{{ cat.id }}"><a href="{{ cat.get_update_url }}">{{ cat.title }}</a>
                         <ul class="nav nav-list" id="ul-category-{{ cat.id }}"></ul>
                     </li>
                 {% endfor %}
@@ -97,229 +98,49 @@
 
 
 {% block extra_js %}
+    <script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
+    <script src="{% static 'js/projects/projectWizard.js' %}"></script>
 
     <script type="text/javascript">
-
+        $('#task-category-list').sortable({
+            update: function(event, ui) {
+                console.log(ui.item);
+            },
+            change: function(event, ui) {
+                console.log(ui.item)
+            },
+            stop: function(event, ui) {
+                console.log($(this).sortable('serialize', {key: 'form'}));
+            }
+        });
         var task_form_url = "{% url 'tasks:task-form' %}";
         var category_form_url = "{% url 'tasks:task-category-form' %}";
-
-        var new_project = $('#new-project');
-        var project_form = $('#project-form');
         var project_form_url = "{% url 'projects:project-form' %}";
 
-        var project_id;
 
-        var new_task_category = $('#new-category');
-
-        function getCookie(name) {
-            var cookieValue = null;
-            if (document.cookie && document.cookie != '') {
-                var cookies = document.cookie.split(';');
-                for (var i = 0; i < cookies.length; i++) {
-                    var cookie = jQuery.trim(cookies[i]);
-                    // Does this cookie string begin with the name we want?
-                    if (cookie.substring(0, name.length + 1) == (name + '=')) {
-                        cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
-                        break;
-                    }
+        // Temp hack for updating projects looks in url for ?project=pk
+        function GetURLParameter(sParam) {
+            var sPageURL = window.location.search.substring(1);
+            var sURLVariables = sPageURL.split('&');
+            for (var i = 0; i < sURLVariables.length; i++) {
+                var sParameterName = sURLVariables[i].split('=');
+                if (sParameterName[0] == sParam) {
+                    return decodeURIComponent(sParameterName[1]);
                 }
             }
-            return cookieValue;
         }
-        function getTasks(pid) {
-            // TODO: REMOVE
-            $.getJSON('/cpm/tasks/project/' + pid, function (result) {
-                $.each(result, function (i, field) {
-                    console.log(field.title);
-                });
-                return result;
-            });
-        }
-        function getProjectForm(projectUrl) {
-            $.getJSON(projectUrl, function (data) {
-                $('#project-form').replaceWith(data['form_html']);
-            })
-        }
-        function getTaskForm(taskUrl) {
-            $.getJSON(taskUrl, function (data) {
-                $('#task-form').replaceWith(data['form_html']);
-            });
-        }
-        function getTaskCategoryForm(taskUrl) {
-            $.getJSON(taskUrl, function (data) {
-                $('#task-category-form').replaceWith(data['form_html']);
-            });
+
+        var project_url_id = GetURLParameter('project');
+        if (project_url_id) {
+            alert(project_url_id);
+            project_form_url = '/cpm/update/' + project_url_id + '/';
+            project_id = project_form_url;
         }
 
         // Have to replace the OG form, therwise 2 csrf tokens are sent
         getProjectForm(project_form_url);
         getTaskCategoryForm(category_form_url);
 
-        function showStep(step) {
-            if (step == 1) {
-                $('#step-nav a[href="#new-project"]').tab('show');
-
-            }
-            else if (step == 2) {
-                $('#step-nav a[href="#new-category"]').tab('show');
-            }
-            else {
-                $('#step-nav a[href="#new-task"]').tab('show');
-            }
-        }
-        $('#step-nav a[href="#new-project"]').click(function (e) {
-            e.preventDefault();
-            $(this).tab('show');
-        });
-        $('#step-nav a[href="#new-category"]').click(function (e) {
-            e.preventDefault();
-            $(this).tab('show');
-        });
-        $('#step-nav a[href="#new-task"]').click(function (e) {
-            e.preventDefault();
-            $(this).tab('show');
-        });
-
-
-        $('#form-wizard').on('submit', '#project-form', function (event) {
-            event.preventDefault();
-            var $this = $(this);
-            console.log($this.serialize());
-            var project_form_title = $this.find('#id_title').val();
-            var cookie = 'csrfmiddlewaretoken=' + getCookie('csrftoken') + '&';
-
-            if (project_form_title == "") {
-                $this.find("#div_id_title").addClass('error');
-                $(project_form_title).after('<span class="help-inline">Title required</span>');
-                $(project_form_title).focus();
-                return false;
-            } else {
-                $('.help-inline').remove();
-                $("#div_id_title").removeClass('error');
-            }
-            $.ajax({
-                url: project_form_url,
-                type: "POST",
-                data: cookie + $this.serialize(),
-                success: function (data) {
-                    console.log(data['form_html']);
-                    if (!(data['success'])) {
-                        console.log('Fail');
-                        $this.replaceWith(data['form_html']);
-                    }
-                    else {
-                        project_form_url = data['update_url'];
-                        project_id = data['pk'];
-                        console.log('PID:  ' + data['pk']);
-                        //$('#new-project').find('.success-message').show(1000).hide(5000);
-                        showStep(2);
-                        $('#new-category input#id_title').focus();
-                    }
-                },
-                error: function () {
-                    $('#new-project').find('.error-message').show()
-                }
-            });
-            return false;
-        });
-
-        $('#form-wizard').on('submit', '#task-category-form', function (event) {
-            var $this = $(this);
-            event.preventDefault();
-            var $this_title = $this.find('#id_title').val();
-            var this_url;
-            var cookie = 'csrfmiddlewaretoken=' + getCookie('csrftoken') + '&';
-
-            if (!$(this).attr('action')) {
-                this_url = category_form_url;
-            } else {
-                this_url = $(this).attr('action');
-            }
-
-            console.log(cookie + $(this).serialize());
-            $.ajax({
-                url: this_url,
-                type: "POST",
-                data: cookie + $(this).serialize(),
-                success: function (data) {
-                    if (!(data['success'])) {
-                        $this.replaceWith(data['form_html']);
-                    }
-                    else {
-                        $this.replaceWith(data['form_html']);
-                        // updates taskform with new category option
-                        getTaskForm(task_form_url);
-                        //$this.find('.success-message').show(1000).hide(5000);
-                        if ((data['new'])) {
-                            $('#task-category-list').prepend('<li><a href="' + data['update_url'] + '">' + $this_title + '</a><ul id="ul-category-' + data['pk'] + '"></ul></li>');
-                        }
-                    }
-                },
-                error: function () {
-                    $this.find('.error-message').show()
-                }
-            });
-            return false;
-        });
-
-        $('#form-wizard').on('submit', '#task-form', function (event) {
-            event.preventDefault();
-            var $task_form = $(this);
-            var task_form_title = $task_form.find('#id_title').val();
-            var task_form_category = $task_form.find('#id_category').val();
-            var task_form_project = $task_form.find('#id_project');
-            var task_url;
-            var cookie = 'csrfmiddlewaretoken=' + getCookie('csrftoken') + '&';
-
-            if (task_form_project.val() == "") {
-                task_form_project.val(project_id);
-            }
-
-            if (!$(this).attr('action')) {
-                task_url = task_form_url;
-            } else {
-                task_url = $(this).attr('action');
-            }
-
-            console.log(cookie + $(this).serialize());
-            $.ajax({
-                url: task_url,
-                type: "POST",
-                data: cookie + $(this).serialize(),
-                success: function (data) {
-                    if (!(data['success'])) {
-                        $task_form.replaceWith(data['form_html']);
-                    }
-                    else {
-                        $task_form.replaceWith(data['form_html']);
-                        $task_form.find('.success-message').show(1000).hide(5000);
-                        if ((data['new'])) {
-                            $('#ul-category-' + task_form_category).prepend('<li><a href="' + data['update_url'] + '">' + task_form_title + '</a></li>');
-                        }
-                    }
-                },
-                error: function () {
-                    $task_form.find('.error-message').show()
-                }
-            });
-            return false;
-        });
-
-
-        $('#task-category-list').on('click', 'a', function (event) {
-            event.preventDefault();
-            var $this = $(this);
-            $('#task-category-list li').removeClass('active');
-            if ($this.is('[href*="category"]')) {
-                showStep(2);
-                getTaskCategoryForm($(this).attr('href'));
-            }
-            else {
-                showStep(3);
-                getTaskForm($(this).attr('href'));
-            }
-            $this.parent().addClass('active')
-        });
     </script>
 
 {% endblock extra_js %}
